[package]
name = "myls"
version = "0.1.4"
authors = ["lome <1209518758@qq.com>"]
edition = "2018"
description = "learning rust small object"
readme = "./README.md"
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
term_size = "0.3.0"
quick-error = "1.2.2"
users = "0.9.1"
size = "0.1.2"
time = "0.1"
